Update Project.toml With New Name

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "TidyTuesday"
+name = "TidierTuesday"
 uuid = "e5e0dc1b-0480-4754-b82b-fe0573bb955c"
 authors = ['nolan cauley']
 contributors = ['frank hull']
